    + Default location for chroot, socket and PID are now configurable
      in `./configure`. The default location is based on the value of
      `runstatedir` which in turn may be based on the value of
      `localstatedir` which defaults to `/usr/local/var`. Therefore,
      to get the previous locations, lldpd should be configured with
      `./configure --localstatedir=/var`.
  * Fixes:
    + Fix `configure system bond-slave-src-mac-type local`

lldpd (0.7.8)
  * Fixes:
    + Don't hard-code default values for system name, system
      description and port description. When the field is not present,
      just don't display it.
    + Fix lldpcli behaviour when suid.
    + On OSX, don't use p2p0 interfaces: it would break WLAN.
    + Fix SNMP support on RHEL.
  * Features:
    + Android support
    + Add the possibility to disable privilege separation (lower
      memory consumption, lower security, don't do it).
    + Interfaces can now be whitelisted. For example, *,!eth*,!!eth1
      is a valid pattern for all interfaces except eth ones, except
      eth1. Moreover, on exact match, an matching interface
      circumvents most sanity checks (like VLAN handling).
    + Ability to override the hostname.

lldpd (0.7.7)
  * Features:
    + Use a locally administered MAC address or an arbitrary one
      instead of null MAC address for bond devices on Linux. This is
      configurable through `lldpcli`.
    + Add support for "team" driver (alternative to bond devices).
    + Preliminary support for DTrace/systemtap.
    + Preliminary support for seccomp (for monitor process).
    + Setup chroot inside lldpd instead of relying on init script.
  * Fixes:
    + Various bugs related to fixed point number handling (for
      coordinates in LLDP-MED)
    + Fix a regression in how MAC address of an enslaved device is
      retrieved.

lldpd (0.7.6)
  * Features:
    + Provide a way to build packages for OSX.