@@ -251,21 +251,21 @@ An arbitrary fixed value
 .Li ( 00:60:08:69:97:ef )
 .It Sy local
 Real mac with locally administered bit set. If the real mac already
-has the locally administered bit set, default to the fixed value.
+has the locally administered bit set, fallback to the fixed value.
 .El
 .Pp
 Default value for
 .Nm bond-slave-src-mac-type
 is
-.Nm fixed .
-Some switches may complain about flapping MAC addresses. In thise case, switch to either
-.Sy zero
-or
-.Sy local .
-Note that there is a slight change that the address generated by
+.Nm local .
+Some switches may complain when using one of the two other possible
+values (either because
+.Li 00:00:00:00:00:00
+is not a valid MAC or because the MAC address is flapping from one
+port to another). Using
 .Sy local
-can be found somewhere else in your network. This is why this is not
-the default value.
+might lead to a duplicate MAC address on the network (but this is
+quite unlikely).
 .Ed
 
 .Cd configure med fast-start
